<resources>
    <string name="app_name">MyAirFare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="dari">Dari</string>
    <string name="ke">Ke</string>
    <string name="cari">Cari</string>
    <string name="mau_kemana_kamu_hari_ini">Mau kemana kamu hari ini ?</string>
    <string name="penerbangan_yang_akan_datang">Penerbangan yang akan datang</string>
    <string name="kelas_bisnis">Kelas Bisnis</string>
    <string name="_31_jam_0_menit">31 jam 0 menit</string>
    <string name="cgk">CGK</string>
    <string name="jakarta">Jakarta</string>
    <string name="_07_00">07:00</string>
    <string name="_21_juni_2022_22_juni_2022">21 juni 2022 – 22 juni 2022</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi ?</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="register">Register</string>
    <string name="disini">disini</string>
    <string name="password">Password</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="daftar">Daftar</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="kebangsaan">Kebangsaan</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="tittle">Tittle</string>
    <string name="verifikasi_email">Verifikasi Email</string>
    <string name="user">User</string>
    <string name="hai_cek_kotak_masuk_email_kamu_ya">Hai, cek kotak masuk email kamu ya…</string>
    <string name="verifikasi_info">Harap verifikasi email mu terlebih dahulu untuk melanjutkan pendaftaran akunmu</string>
    <string name="buka_kotak_masuk_email">Buka kotak masuk email</string>
    <string name="pilih_tiket">Pilih Tiket</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <string name="hallo_name">Hallo Name</string>
    <string name="penumpang">Penumpang</string>
    <string name="keberangkatan">Keberangkatan</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masukkan_email_yang_terdaftar">Masukkan email yang terdaftar</string>
    <string name="email_anda">Email Anda</string>
    <string name="kirim">Kirim</string>
    <string name="ticket">Ticket</string>
    <string name="detail_pembelian_tiket">Detail Pembelian Tiket</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="detail_penumpang">Detail Penumpang</string>
    <string name="tiket">Tiket</string>
    <string name="lunas">Lunas</string>
    <string name="daftar_atau_masuk">Daftar atau Masuk</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="keluar">Keluar</string>
    <string name="masuk_daftar">Silahkan Daftar atau Masuk agar bisa menggunakan fitur MyAirFare lebih banyak lagi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="simpan">Simpan</string>
    <string name="setting">Setting</string>
    <string name="ubah_akun">Ubah Akun</string>
    <string name="akun_preferensi"><![CDATA[Akun & Preferensi]]></string>
    <string name="bahasa_tema_aplikasi"><![CDATA[Bahasa & Tema Aplikasi]]></string>
    <string name="bahasa">Bahasa</string>
    <string name="tema_aplikasi">Tema Aplikasi</string>
    <string name="versi_aplikasi">Versi Aplikasi</string>
    <string name="detail_pembayaran">Detail Pembayaran</string>
    <string name="e_ticket">E-Ticket</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="nomor_e_ticket">Nomor E-Ticket</string>
    <string name="nama_penumpang">Nama Penumpang</string>
    <string name="nomor_penerbangan">Nomor Penerbangan</string>
    <string name="nomor_kursi">Nomor Kursi</string>
    <string name="check_in">Check In</string>
    <string name="detail_perjalanan">Detail Perjalanan</string>
    <string name="dash">-</string>
    <string name="_21_juni">21 Juni</string>
    <string name="bandara_soekarno_hatta">Bandara Soekarno Hatta</string>
    <string name="garuda_indonesia">Garuda Indonesia</string>
    <string name="_1_0">1.0</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="booking">Booking</string>
    <string name="pesan">Pesan</string>
    <string name="notifications">Notifications</string>
    <string name="lets_fly_higher">Lets Fly Higher</string>
    <string name="save">Save</string>
    <string name="bagikan">Bagikan</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="selesai">Selesai</string>
    <string name="nama_panggilan">Nama Panggilan</string>
    <string name="kembali">Kembali</string>
    <string name="lewati">Lewati</string>
    <string name="kamera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="pencarian_tidak_ditemukan_silahkan_masukkan_kata_kunci_yang_lain">Pencarian tidak ditemukan, silahkan masukkan kata kunci yang lain</string>
    <string name="keranjang">Keranjang</string>
    <string name="tidak_ada_notifikasi">Tidak ada notifikasi</string>
    <string name="batal">Batal</string>
    <string name="logout_alert">Mungkin beberapa fitur tidak dapat digunakan ketika keluar, Apakah anda yakin?</string>
    <string name="alert_login">Upss, kamu tidak bisa menggunakan fitur ini, silahkan login terlebih dahulu</string>
    <string name="asal">Asal</string>
    <string name="tujuan">Tujuan</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="alert_text_logout">Sayang sekali, banyak keuntungan yang akan anda lewatkan : Booking,keranjang, history dan masih banyak lagi. Apakah anda yakin untuk keluar ?</string>
    <string name="keluar_dari_akun">Keluar dari akun</string>
    <string name="tvGuest_cart_one">Pantau Tiket anda melalui fitur keranjang</string>
    <string name="tvGuest2">Tambah dan pesan tiket saat anda siap nanti</string>
    <string name="masuk_akun">Masuk akun</string>
    <string name="total">Total</string>
    <string name="harga_tiket">Harga Tiket</string>
    <string name="tipe_tiket">Tipe Tiket</string>
    <string name="kelas">Kelas</string>
    <string name="tidak_ada_data_keranjang">Tidak ada data keranjang</string>
    <string name="pulang_pergi">Pulang Pergi</string>
    <string name="tanggal_pulang">Tanggal Pulang</string>
    <string name="tanggal_pergi">Tanggal Pergi</string>
    <string name="jumlah_kursi">Jumlah Kursi</string>
    <string name="jenis_tiket">Jenis Tiket</string>
    <string name="perjalanan_pergi">Perjalanan Pergi</string>
    <string name="perjalanan_pulang">Perjalanan Pulang</string>
    <string name="total_harga_tiket">Total Harga Tiket</string>
    <string name="menunggu_pembayaran">Menunggu Pembayaran</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="data_transaksi">Data Transaksi</string>
    <string name="rincian_harga">Rincian Harga</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="klik_lanjutkan_untuk_melihat_metode_pembayaran">Klik lanjutkan untuk melihat metode pembayaran</string>
    <string name="lainnya">Lainnya</string>
    <string name="batalkan_pesanan_ini">Batalkan Pesanan Ini</string>
    <string name="lanjutkan_pembayaran">Lanjutkan Pembayaran</string>
    <string name="batalkan_tiket">Batalkan Tiket</string>
    <string name="apakah_anda_yakin_untuk_membatalkan_tiket_ini">Apakah anda yakin untuk membatalkan tiket ini ?</string>
    <string name="visa_number">Visa Number</string>
    <string name="nama_penerbangan">Nama Penerbangan</string>
    <string name="checkin_sekarang">Checkin Sekarang</string>
    <string name="klik_scan_untuk_checkin_menggunakan_nomor_penerbangan_anda">Klik chekin sekarang untuk scan menggunakan nomor penerbangan anda</string>
    <string name="tidak_ada_tiket_aktif">Tidak ada tiket aktif</string>
    <string name="tidak_ada_tiket_yang_sudah_terlewat">Tidak ada tiket yang sudah terlewat</string>
    <string name="daftar_dengan_google">Daftar dengan google</string>

    <string-array name="classes">
        <item>Economy</item>
        <item>Business</item>
    </string-array>
    <string-array name="type">
        <item>Dewasa</item>
        <item>Anak-Anak</item>
    </string-array>


    <string-array name="tittle_item">
        <item>Tuan</item>
        <item>Nyonya</item>
    </string-array>
</resources>