<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/cartFragment"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart"/>

    <item
        android:id="@+id/ticketFragment"
        android:title="@string/ticket"
        android:icon="@drawable/ic_ticket"/>

    <item
        android:id="@+id/notificationFragment2"
        android:title="@string/notifikasi"
        android:icon="@drawable/ic_notification"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_user"/>

</menu>