<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/verifikasi_email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp30" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_confirmation" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/hai_cek_kotak_masuk_email_kamu_ya"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/user"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/sp16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/verifikasi_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/dp10"
            android:text="@string/buka_kotak_masuk_email"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/dp10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>