<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/sp30"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp30"
            android:fontFamily="@font/poppins_regular"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/sp20"
        android:background="@drawable/background_auth">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:layout_marginEnd="@dimen/dp5"
            android:layout_marginStart="@dimen/dp5"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/background_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:layout_marginEnd="@dimen/dp5"
            android:layout_marginStart="@dimen/dp5"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/background_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/dp15"
            android:text="@string/masuk"
            app:cornerRadius="@dimen/dp10"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/dp15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilLinear" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lupa_kata_sandi"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atau_masuk_dengan"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="@dimen/dp10"
            android:textColor="@color/black"
            android:textAlignment="center"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="@dimen/dp5"
           android:gravity="center">

           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:cardCornerRadius="@dimen/dp10"
               android:layout_margin="@dimen/dp10"
               app:cardElevation="@dimen/dp5">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="@dimen/dp20"
                   android:src="@drawable/ic_google"/>

           </androidx.cardview.widget.CardView>
       </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:layout_margin="@dimen/dp5"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_margin="@dimen/dp5"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/primary"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:text="@string/disini"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>