<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.CartFragment">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keranjang"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/sp18"
        android:layout_marginTop="@dimen/dp20"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imageNotFound"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_not_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.370" />

    <TextView
        android:id="@+id/tvNotFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tidak_ada_notifikasi"
        android:textSize="@dimen/sp16"
        android:visibility="gone"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp15"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageNotFound" />

    <ImageView
        android:id="@+id/imageGuest"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_cart_ilus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <TextView
        android:id="@+id/tvGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvGuest_cart_one"
        android:textSize="@dimen/sp16"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp15"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageGuest" />

    <TextView
        android:id="@+id/tvGuest2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvGuest2"
        android:textSize="@dimen/sp16"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp15"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGuest" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/poppins_regular"
        android:padding="@dimen/dp15"
        android:text="@string/daftar_atau_masuk"
        app:cornerRadius="@dimen/dp10"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/dp15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGuest2"/>

</androidx.constraintlayout.widget.ConstraintLayout>