<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_rounded_stroke"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:navigationIcon="@drawable/ic_backed"
        android:layout_margin="@dimen/dp10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        android:layout_margin="@dimen/dp20"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_forget_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_email_yang_terdaftar"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp15"
            android:textSize="@dimen/sp16"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_anda"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/background_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/dp15"
            android:text="@string/kirim"
            app:cornerRadius="@dimen/dp10"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/dp15" />




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>